--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   cloud_firestore: ^5.4.3
   firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  sign_in_button: ^3.2.0
+  shared_preferences: ^2.3.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
